# paint

./: .gitignore  Cargo.toml  README.md
assets/: syntaxes.packdump  themes.themedump
docs/: after.html  before.html  embed.html  example.js  examples.css  index.html  main.css  main.js  snippets.css
src/: color.rs  main.rs  paint.rs
