[package]
authors = ["Sterling DeMille <sterlingdemille+github@gmail.com>"]
name = "paint"
description = "A sublime-like syntax highlighter"
version = "0.1.0"

categories = ["command-line-utilities"]
keywords = ["syntax", "highlighting", "pygments"]
repository = "https://github.com/demille/paint"
documentation = "https://github.com/demille/paint"
readme = "README.md"
license = "MIT"

[dependencies]
clap = "2.29.3"
notify = "4.0.3"
regex = "0.2.6"
syntect = "2.0.0"
